<resources>
    <string name="app_name">MyBudget</string>
    <string name="app_logo_img">MyBudget Logo</string>
    <!-- Strings para íconos font awesome -->
    <string name="fa_sign_in_alt">&#xf2f6;</string>
    <string name="fa_help">&#xf059;</string>
    <string name="fa_user_plus">&#xf234;</string>
    <string name="fa_user_circle">&#xf2bd;</string>
    <!-- Otros Strings -->
    <string name="agregar_perfil">Agregar Perfil</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="fotodeperfil">FotoDePerfil</string>
    <string name="foto_de_perfil_msg">Foto de Perfil</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="versi_n">Versión:</string>
    <string name="desarrolladores">Desarrolladores:</string>
    <string name="nombres_joaquin">• Joaquín Antonio Barrientos Pérez</string>
    <string name="nombre_cely">• Celina Claribel Carranza Cruz</string>
    <string name="nombre_marcelo">• José Marcelo Hernández Cerritos</string>
    <string name="nombre_os">• Oswaldo Alfredo Aguilar Ortíz</string>
    <string name="salir_de_la_aplicaci_n">Salir de la Aplicación</string>
    <string name="action_settings">Settings</string>
    <string name="administrar_mybudget">Administrar MyBudget</string>
    <string name="resumen">Resumen</string>
    <string name="periodos">Períodos</string>
    <string name="fondos">Fondos</string>
    <string name="pagos">Pagos</string>
    <string name="gastos">Gastos</string>
    <string name="lista_de_supermercado">Lista de Supermercado</string>
    <string name="ajustes">Ajustes</string>
    <string name="general">General</string>
    <string name="mi_cuenta">Mi Cuenta</string>
    <string name="acerca_de">Acerca De</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="acepto_los_t_rminos_y_condiciones">Acepto los Términos y Condiciones</string>
    <string name="registrarse">Registrarse</string>
    <string name="todo">TODO</string>
    <string name="mensajeDialogo">¿Desea salir de la aplicación?</string>
    <string name="dialogoSi">Sí</string>
    <string name="dialogoNo">No</string>
    <string name="tituloDialogo">Salir de la App</string>
    <string name="_1_0_1">1.0.1</string>
</resources>
