<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/PMS3285"
    tools:context=".layout.AgregarPerfil">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/lyt_fotoperfil"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                </LinearLayout>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Añadir un Perfil"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyt_controles"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre_de_usuario"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/etUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext_states"
                    android:inputType="textPersonName"
                    android:padding="5dip"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/contrase_a"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/etClave1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext_states"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:padding="5dip" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/confirmar_contrase_a"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/etClave2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext_states"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:padding="5dip" />

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/acepto_los_t_rminos_y_condiciones"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp" />

            </LinearLayout>

            <Button
                android:id="@+id/enviar_datos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#004d40"
                android:text="@string/registrarse"
                android:textColor="@android:color/background_light" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>